<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_contract"
            android:icon="@drawable/ic_baseline_contract_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_baseline_product_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_transfer"
            android:icon="@drawable/ic_baseline_transfer_within_a_station_24"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_user" />
        <item
            android:id="@+id/nav_comment"
            android:icon="@drawable/ic_baseline_comment_24"
            android:title="@string/menu_comment" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_keyboard_backspace_24"
            android:title="@string/logout" />
    </group>
</menu>