<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_contract">

    <fragment
        android:id="@+id/nav_contract"
        android:name="com.ccis.seafoodtrans.view.Contract.ContractAdminFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/contract_list_fragment" />

    <fragment
        android:id="@+id/nav_product"
        android:name="com.ccis.seafoodtrans.view.product.ProductAdminFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/product_admin_list_layout" />

    <fragment
        android:id="@+id/nav_transfer"
        android:name="com.ccis.seafoodtrans.view.transfer.TransferFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/contract_list_fragment" />

    <fragment
        android:id="@+id/nav_user"
        android:name="com.ccis.seafoodtrans.view.user.UsersListFragment"
        android:label="@string/menu_user"
        tools:layout="@layout/contract_list_fragment" />

    <fragment
        android:id="@+id/nav_comment"
        android:name="com.ccis.seafoodtrans.view.comment.CommentListFragment"
        android:label="@string/menu_comment"
        tools:layout="@layout/product_admin_list_layout" />
</navigation>