<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:text="@string/name"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:id="@+id/nameTIL"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/nameTextView"
            app:layout_constraintTop_toTopOf="@id/nameTextView"
            app:layout_constraintBottom_toBottomOf="@id/nameTextView"
            android:minWidth="@dimen/_200sdp"
            android:layout_marginStart="@dimen/_8sdp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:singleLine="true"
                android:textColorHint="@color/colorAccent"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/nameTextView"
            android:layout_marginTop="40dp"
            android:text="@string/email"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintStart_toStartOf="@id/nameTextView" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:id="@+id/emailTIL"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/nameTIL"
            app:layout_constraintEnd_toEndOf="@id/nameTIL"
            app:layout_constraintTop_toTopOf="@id/emailTextView"
            app:layout_constraintBottom_toBottomOf="@id/emailTextView"
            android:minWidth="@dimen/_200sdp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:singleLine="true"
                android:textColorHint="@color/colorAccent"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/phoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/emailTextView"
            android:layout_marginTop="40dp"
            android:text="@string/phone"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintStart_toStartOf="@id/nameTextView" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:id="@+id/phoneTIL"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/nameTIL"
            app:layout_constraintEnd_toEndOf="@id/nameTIL"
            app:layout_constraintTop_toTopOf="@id/phoneTextView"
            app:layout_constraintBottom_toBottomOf="@id/phoneTextView"
            android:minWidth="@dimen/_200sdp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:singleLine="true"
                android:textColorHint="@color/colorAccent"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/typeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/phoneTextView"
            android:layout_marginTop="40dp"
            android:text="@string/type"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintStart_toStartOf="@id/nameTextView" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:minWidth="@dimen/_200sdp"
            app:layout_constraintTop_toTopOf="@id/typeTextView"
            app:layout_constraintBottom_toBottomOf="@id/typeTextView"
            app:layout_constraintStart_toStartOf="@id/phoneTIL"
            app:layout_constraintEnd_toEndOf="@id/phoneTIL"
            android:layout_height="wrap_content"
            android:minHeight="35dp"
            android:gravity="center_vertical"
            android:entries="@array/array_type" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/okBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@+id/spinner"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:backgroundTint="@color/design_default_color_error"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@+id/spinner"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>