<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:textStyle="bold"
            android:textColor="@color/colorBackground"
            android:text="@string/name"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productImg" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/_200sdp"
            app:errorEnabled="true"
            app:layout_constraintBottom_toBottomOf="@id/nameTextView"
            app:layout_constraintEnd_toEndOf="@+id/emailTIL"
            app:layout_constraintStart_toStartOf="@+id/emailTIL"
            app:layout_constraintTop_toTopOf="@id/nameTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:singleLine="true"
                android:textColorHint="@color/colorBackground"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textStyle="bold"
            android:textColor="@color/colorBackground"
            android:text="@string/weight"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintStart_toStartOf="@id/nameTextView"
            app:layout_constraintTop_toBottomOf="@id/nameTextView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/_200sdp"
            app:errorEnabled="true"
            app:layout_constraintBottom_toBottomOf="@id/emailTextView"
            app:layout_constraintEnd_toEndOf="@+id/phoneTIL"
            app:layout_constraintStart_toStartOf="@+id/phoneTIL"
            app:layout_constraintTop_toTopOf="@id/emailTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/weightEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:singleLine="true"
                android:textColorHint="@color/colorBackground"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/phoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/emailTextView"
            android:layout_marginTop="40dp"
            android:textStyle="bold"
            android:textColor="@color/colorBackground"
            android:text="@string/price"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintStart_toStartOf="@id/nameTextView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/_200sdp"
            app:errorEnabled="true"
            app:layout_constraintBottom_toBottomOf="@id/phoneTextView"
            app:layout_constraintEnd_toEndOf="@+id/amountTIL"
            app:layout_constraintStart_toStartOf="@+id/amountTIL"
            app:layout_constraintTop_toTopOf="@id/phoneTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/priceEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:singleLine="true"
                android:textColorHint="@color/colorBackground"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amountTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:minWidth="@dimen/_200sdp"
            app:errorEnabled="true"
            app:layout_constraintBottom_toBottomOf="@+id/typeTextView"
            app:layout_constraintStart_toEndOf="@+id/typeTextView"
            app:layout_constraintTop_toTopOf="@+id/typeTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amountEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:singleLine="true"
                android:textColorHint="@color/colorBackground"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/typeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/phoneTextView"
            android:layout_marginTop="40dp"
            android:textStyle="bold"
            android:textColor="@color/colorBackground"
            android:text="@string/amount"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintStart_toStartOf="@id/nameTextView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/okBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/save"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@+id/nameTIL"
            app:layout_constraintTop_toBottomOf="@+id/amountTIL" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:backgroundTint="@color/design_default_color_error"
            android:text="@string/cancel"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="@+id/okBtn"
            app:layout_constraintStart_toStartOf="@+id/typeTextView"
            app:layout_constraintTop_toTopOf="@+id/okBtn" />

        <ImageView
            android:id="@+id/productImg"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_menu_gallery"
            app:tint="@color/colorAccent" />

        <ImageView
            android:id="@+id/cameraImg"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_baseline_camera_24"
            app:layout_constraintBottom_toBottomOf="@+id/productImg"
            app:layout_constraintEnd_toEndOf="@+id/productImg" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>